// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Treemap Chart tooltip formatter > contribution mode 1`] = `
"
      <div
        class="csdk-treemap-tooltip-wrapper">

                <div
                  class="csdk-treemap-tooltip-level"
                  style="background: white;"
                  >

                  <span
                    style="color: currentColor"
                  >Three</span>
                  <span
                    style="color: currentColor; margin-left: auto;"
                  >75.0%</span>

  <div style="position: absolute; top: 100%; right: 40px; z-index: 1">
    <div style="
      border: solid transparent;
      content: ' ';
      height: 0;
      width: 0;
      position: absolute;
      pointer-events: none;
      border-color: rgba(136,136,136,0);
      border-top-color: #ccc;
      border-width: 7px 12px 12px 12px;
      margin-left: -7px;
    "></div>
     <div style="
       border: solid transparent;
       content: ' ';
       height: 0;
       width: 0;
       position: absolute;
       pointer-events: none;
       border-color: rgba(255,255,255,0);
       border-top-color: #fff;
       border-width: 6px 11px 11px 11px;
       margin-left: -6px;
     "></div>
  </div>

                </div>
                <div
                  class="csdk-treemap-tooltip-level"
                  style="background: white;"
                  >

                  <span
                    style="color: currentColor"
                  >Two</span>
                  <span
                    style="color: currentColor; margin-left: auto;"
                  >50.0%</span>

  <div style="position: absolute; top: 100%; right: 40px; z-index: 1">
    <div style="
      border: solid transparent;
      content: ' ';
      height: 0;
      width: 0;
      position: absolute;
      pointer-events: none;
      border-color: rgba(136,136,136,0);
      border-top-color: #ccc;
      border-width: 7px 12px 12px 12px;
      margin-left: -7px;
    "></div>
     <div style="
       border: solid transparent;
       content: ' ';
       height: 0;
       width: 0;
       position: absolute;
       pointer-events: none;
       border-color: rgba(255,255,255,0);
       border-top-color: #fff;
       border-width: 6px 11px 11px 11px;
       margin-left: -6px;
     "></div>
  </div>

                </div>
                <div
                  class="csdk-treemap-tooltip-level"
                  style="background: #f2f2f2;"
                  >

                  <span
                    style="color: blue"
                  >One</span>
                  <span
                    style="color: #5B6372; margin-left: auto;"
                  >25.0%</span>

                </div>
        <div class="csdk-treemap-tooltip-value">
          <span style="color:blue; font-size: 15px">25.0%</span> of test
        </div>
        <div class="csdk-treemap-tooltip-value" style="padding-top: 4px;">
                  <span style="color:blue; font-size: 15px">50.0%
                  </span> of Two
                </div>

        </div>
      </div>"
`;

exports[`Treemap Chart tooltip formatter > single category tooltip 1`] = `
"
      <div
        class="csdk-treemap-tooltip-wrapper">

                <div
                  class="csdk-treemap-tooltip-level"
                  style="background: #f2f2f2;"
                  >

                  <span
                    style="color: red"
                  >One</span>
                  <span
                    style="color: #5B6372; margin-left: auto;"
                  >1</span>

                </div>
        <div class="csdk-treemap-tooltip-value">
          <span style="color:red; font-size: 15px">1</span> of test
        </div>


        </div>
      </div>"
`;

exports[`Treemap Chart tooltip formatter > three categories tooltip 1`] = `
"
      <div
        class="csdk-treemap-tooltip-wrapper">

                <div
                  class="csdk-treemap-tooltip-level"
                  style="background: white;"
                  >

                  <span
                    style="color: currentColor"
                  >Three</span>
                  <span
                    style="color: currentColor; margin-left: auto;"
                  >3</span>

  <div style="position: absolute; top: 100%; right: 40px; z-index: 1">
    <div style="
      border: solid transparent;
      content: ' ';
      height: 0;
      width: 0;
      position: absolute;
      pointer-events: none;
      border-color: rgba(136,136,136,0);
      border-top-color: #ccc;
      border-width: 7px 12px 12px 12px;
      margin-left: -7px;
    "></div>
     <div style="
       border: solid transparent;
       content: ' ';
       height: 0;
       width: 0;
       position: absolute;
       pointer-events: none;
       border-color: rgba(255,255,255,0);
       border-top-color: #fff;
       border-width: 6px 11px 11px 11px;
       margin-left: -6px;
     "></div>
  </div>

                </div>
                <div
                  class="csdk-treemap-tooltip-level"
                  style="background: white;"
                  >

                  <span
                    style="color: currentColor"
                  >Two</span>
                  <span
                    style="color: currentColor; margin-left: auto;"
                  >2</span>

  <div style="position: absolute; top: 100%; right: 40px; z-index: 1">
    <div style="
      border: solid transparent;
      content: ' ';
      height: 0;
      width: 0;
      position: absolute;
      pointer-events: none;
      border-color: rgba(136,136,136,0);
      border-top-color: #ccc;
      border-width: 7px 12px 12px 12px;
      margin-left: -7px;
    "></div>
     <div style="
       border: solid transparent;
       content: ' ';
       height: 0;
       width: 0;
       position: absolute;
       pointer-events: none;
       border-color: rgba(255,255,255,0);
       border-top-color: #fff;
       border-width: 6px 11px 11px 11px;
       margin-left: -6px;
     "></div>
  </div>

                </div>
                <div
                  class="csdk-treemap-tooltip-level"
                  style="background: #f2f2f2;"
                  >

                  <span
                    style="color: blue"
                  >One</span>
                  <span
                    style="color: #5B6372; margin-left: auto;"
                  >1</span>

                </div>
        <div class="csdk-treemap-tooltip-value">
          <span style="color:blue; font-size: 15px">1</span> of test
        </div>
        <div class="csdk-treemap-tooltip-value" style="padding-top: 4px;">
                  <span style="color:blue; font-size: 15px">50.0%
                  </span> of Two
                </div>

        </div>
      </div>"
`;
